Improve logic payout for short term job